fixed bug with phone number display

--- a/css/public-staff-list.css
+++ b/css/public-staff-list.css
@@ -21,3 +21,8 @@
 	color: #0169a4;
 	font-family: "Lato", sans-serif;
 }
+
+.staff-member-phone {
+  	font-weight: 200;
+	font-family: "Lato", sans-serif;
+}
