changed function titles to be unique to plugin

--- a/css/admin-staff-list.css
+++ b/css/admin-staff-list.css
@@ -2,7 +2,7 @@
 	margin:10px 0 0;
 }
 
-.sslp_admin_wrap input[type="text"] {
+.boise_state_ssl_admin_wrap input[type="text"] {
 	font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",sans-serif;
 	width: 30%;
 }
